<?xml version="1.0"?>
<package format="2">
  <name>odom_practice</name>
  <version>0.0.0</version>
  <description>The odom_practice package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="godoctorsam@gmail.com">park</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>tf</build_depend>
  <exec_depend>tf</exec_depend>


  
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
